--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "^2.1.3",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
+  },
+
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
+
   },
   "scripts": {
     "start": "react-scripts start",
